--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
-        "pbmedia/laravel-ffmpeg": "^7.5"
+        "pbmedia/laravel-ffmpeg": "^7.5",
+        "spatie/image": "^1.10"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
