--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.2",
+        "laravel/ui": "1.3",
         "pbmedia/laravel-ffmpeg": "^7.5",
         "spatie/image": "^1.10"
     },
